feat(core): switch to new attribute rights evaluation
* marked old attribute rights methods as deprecated
* new attribute rights evaluation is used in place old methods were used
* initial attribute rights for roles were replaced by separate policy collections containing these roles
* migrated policies are set such that the results of authorization are similar to the old approach
* READ_PUBLIC right is replaced with combination (role Self - object None)